# app/Http/Controllers/HomeController.php
@@ -2,6 +2,8 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\Category;
+use App\Models\Item;
 use Illuminate\Http\Request;
 
 class HomeController extends Controller
@@ -13,6 +15,19 @@ class HomeController extends Controller
     
     public function store(Request $request)
     {
-        dd($request->all());
+        //store item from form
+        $item = new Item();
+        $item->name = $request->name;
+        $item->description = $request->description;
+        $item->status = null;
+        $item->categories(
+            collect(explode(',', $request->category))->map(function ($category) {
+                return ['name' => $category];
+            })
+        );
+        dd($request->category, $item->categories());
+        $item->save();
+
+        back()->withSuccess('Item added success!');
     }
 }
